<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="top"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/activity_scanner_tv_header_close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_medium"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_close" />

        <TextView
            android:id="@+id/activity_scanner_tv_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/poppins_medium"
            android:paddingVertical="16dp"
            android:text="@string/scanner_screen_header"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="16dp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_scanner_tv_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:focusable="true"
            android:fontFamily="@font/poppins_medium"
            android:padding="16dp"
            android:text="@string/manual"
            android:textAlignment="center"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/ic_scan_grey" />

        <TextView
            android:id="@+id/activity_scanner_tv_scanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="8dp"
            android:focusable="true"
            android:fontFamily="@font/poppins_medium"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            android:text="@string/scan"
            android:textAlignment="center"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/ic_qr_code_blue" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_scanner_ll_scanner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/scan_bar_code"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.budiyev.android.codescanner.CodeScannerView
            android:id="@+id/activity_scanner_scanner_view"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            app:frameAspectRatioHeight="192"
            app:frameAspectRatioWidth="256"
            app:maskColor="#222224" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_scanner_ll_manual_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:drawablePadding="24dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/type_bar_code"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:drawableBottomCompat="@drawable/ic_barcode" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_scanner_et_barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:imeOptions="actionDone"
                android:inputType="textCapWords"
                android:letterSpacing="0.2"
                android:singleLine="true"
                android:text=""
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>